3.1.0.pre.1
* Adds `ngram` function.

3.0.0
* Adds support for recursive references.
* Removed REST api support from `Client`.
* Added `abort` function.
* Added `normalizer` argument to `casefold` function.
* Added `new_id` function.
* Deprecated `next_id` function in favor of `new_id`.
* Added `identity` and `has_identity` functions.
* Added `singleton` and `events` functions.
* Added `select_all` function.

2.4.0
* Handle HTTP errors 502 and 504 as `Fauna::UnavailableError`.
* Added support for user-defined functions.
* Added support for the `@query` type (via `Fauna::QueryV`).
* Added `create_function`, `function`, and `call` query functions.

2.3.0
* Change default domain to `db.fauna.com`.
* Added `key_from_secret` and `at` query functions.
* Added support for `@bytes` type (via `Fauna::Bytes`).

2.2.0
* Added `create_class`, `create_index`, `create_database`, `create_key`, `database`, `class`,
  and `index` query functions.
* Removed `count` query function.
* Raises `Fauna::UnavailableError` for all 503s and for Faraday network errors.
* Fix documentation errors and update links.

2.1.2
* Change default domain to `cloud.faunadb.com`.

2.1.1
* Use persistent connections (via the `net-http-persistent` adapter) by default.

2.1.0
* Added paginate helper.
* Improved exception messages (now include FaunaDB errors).
* Added `ref` and `next_id` query functions.

2.0.0
* Complete rewrite for API 2.0. Not backwards compatible with the old client or api.