@@ -1,5 +1,6 @@
 3.1.0.pre.1
 * Adds `ngram` function.
+* Added `is_empty` and `is_nonempty` functions.
 
 3.0.0
 * Adds support for recursive references.
